--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,12 @@ article div img {
     text-align: center;
 }
 
+.description{
+    border:none;
+    margin: 5px;
+    font-size: 10pt;
+}
+
 @media only screen and (max-width: 1200px) {
     div#content {
         flex-direction: column;
